[package]
name = "xlstm-rs"
version = "0.1.0"
authors = ["Thomas Q <thomasqsa@gmail.com>"]
edition = "2024"
description = "A Rust implementation of xLSTM (Extended Long Short-Term Memory) neural networks"
license = "MIT"
keywords = ["xlstm", "lstm", "neural-network", "machine-learning", "deep-learning"]
categories = ["algorithms", "science"]

[dependencies]
bincode = "2.0.1"
ndarray = { version = "0.16.1", features = ["rayon", "matrixmultiply-threading"] }
rand = { version = "0.9.2", features = ["std"] }
rand_distr = "0.5.1"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.0"
csv = "1.3.1"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "sequence_modeling"
path = "examples/sequence_modeling.rs"

[[example]]
name = "time_series_prediction"
path = "examples/time_series_prediction.rs"

[[example]]
name = "trading_with_ppo"
path = "examples/trading_with_ppo.rs"
