[package]
name = "xlstm-ppo"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
ndarray = { version = "0.16.1", features = ["rayon", "matrixmultiply-threading"] }
rand = { version = "0.9.2", features = ["std"] }
rand_distr = "0.5.1"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.0"
csv = "1.3.1"
