[package]
name = "xlstm-rs"
version = "0.1.0"
edition = "2024"
description = "xLSTM: Extended Long Short-Term Memory implementation in Rust using Burn"

[dependencies]
burn = { version = "0.18.0", features = ["train", "std"] }
burn-autodiff = "0.18.0"
burn-fusion = "0.18.0"
burn-ndarray = "0.18.0"
burn-wgpu = { version = "0.18.0", features = ["vulkan", "cubecl-spirv"] }
chrono = "0.4.42"
csv = "1.3.1"
env_logger = "0.11.8"
log = "0.4.28"
ndarray = "0.16.1"
num-traits = "0.2.19"
plotters = "0.3.7"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }

[lib]
name = "xlstm"
path = "src/lib.rs"
